--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^15.1.0",
     "bootstrap": "^5.2.3",
     "chroma-js": "^2.4.2",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
