--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "bootstrap": "^5.2.3",
     "chroma-js": "^2.4.2",
     "jwt-decode": "^3.1.2",
     "ngx-avatar": "^4.1.0",
+    "ngx-translate-multi-http-loader": "^9.3.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -45,6 +48,7 @@
     "@types/jasmine": "~4.0.0",
     "@typescript-eslint/eslint-plugin": "5.43.0",
     "@typescript-eslint/parser": "5.43.0",
+    "deepmerge-ts": "^4.3.0",
     "eslint": "^8.28.0",
     "eslint-plugin-deprecation": "^1.3.3",
     "eslint-plugin-import": "^2.27.5",
