--- a/package.json
+++ b/package.json
@@ -1,65 +1,75 @@
 {
-  "name": "frontend-admin-app",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "pretty-ts": "npx prettier --write projects/app-ui/src/app/**/*.ts",
-    "pretty-html": "npx prettier --write projects/app-ui/src/app/**/*.html",
-    "pretty-all": "npx prettier --write projects/app-ui/src/app/**/*.{ts,html,scss}",
-    "test": "ng test",
-    "lint": "ng lint"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^14.2.0",
-    "@angular/cdk": "^14.2.7",
-    "@angular/common": "^14.2.0",
-    "@angular/compiler": "^14.2.0",
-    "@angular/core": "^14.2.0",
-    "@angular/forms": "^14.2.0",
-    "@angular/material": "^14.2.7",
-    "@angular/platform-browser": "^14.2.0",
-    "@angular/platform-browser-dynamic": "^14.2.0",
-    "@angular/router": "^14.2.0",
-    "@ngx-translate/core": "^14.0.0",
-    "@ngx-translate/http-loader": "^7.0.0",
-    "bootstrap": "^5.2.3",
-    "chroma-js": "^2.4.2",
-    "jwt-decode": "^3.1.2",
-    "ngx-avatar": "^4.1.0",
-    "ngx-translate-multi-http-loader": "^9.3.1",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.10",
-    "@angular-eslint/builder": "14.4.0",
-    "@angular-eslint/eslint-plugin": "14.4.0",
-    "@angular-eslint/eslint-plugin-template": "14.4.0",
-    "@angular-eslint/schematics": "14.4.0",
-    "@angular-eslint/template-parser": "14.4.0",
-    "@angular/cli": "~14.2.10",
-    "@angular/compiler-cli": "^14.2.0",
-    "@types/chroma-js": "^2.1.5",
-    "@types/jasmine": "~4.0.0",
-    "@typescript-eslint/eslint-plugin": "5.43.0",
-    "@typescript-eslint/parser": "5.43.0",
-    "deepmerge-ts": "^4.3.0",
-    "eslint": "^8.28.0",
-    "eslint-plugin-deprecation": "^1.3.3",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "jasmine-core": "~4.3.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "prettier": "^2.8.4",
-    "typescript": "~4.7.2"
-  }
+	"name": "frontend-admin-app",
+	"version": "0.0.0",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve",
+		"build": "ng build",
+		"watch": "ng build --watch --configuration development",
+		"pretty-ts": "npx prettier --write projects/app-ui/src/app/**/*.ts",
+		"pretty-html": "npx prettier --write projects/app-ui/src/app/**/*.html",
+		"pretty-all": "npx prettier --write projects/app-ui/src/app/**/*.{ts,html,scss}",
+		"prepare": "husky install",
+		"test": "ng test",
+		"lint": "ng lint"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "^14.2.0",
+		"@angular/cdk": "^14.2.7",
+		"@angular/common": "^14.2.0",
+		"@angular/compiler": "^14.2.0",
+		"@angular/core": "^14.2.0",
+		"@angular/forms": "^14.2.0",
+		"@angular/material": "^14.2.7",
+		"@angular/platform-browser": "^14.2.0",
+		"@angular/platform-browser-dynamic": "^14.2.0",
+		"@angular/router": "^14.2.0",
+		"@ngx-translate/core": "^14.0.0",
+		"@ngx-translate/http-loader": "^7.0.0",
+		"bootstrap": "^5.2.3",
+		"chroma-js": "^2.4.2",
+		"jwt-decode": "^3.1.2",
+		"ngx-avatar": "^4.1.0",
+		"ngx-translate-multi-http-loader": "^9.3.1",
+		"rxjs": "~7.5.0",
+		"tslib": "^2.3.0",
+		"zone.js": "~0.11.4"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular": "^14.2.10",
+		"@angular-eslint/builder": "14.4.0",
+		"@angular-eslint/eslint-plugin": "14.4.0",
+		"@angular-eslint/eslint-plugin-template": "14.4.0",
+		"@angular-eslint/schematics": "14.4.0",
+		"@angular-eslint/template-parser": "14.4.0",
+		"@angular/cli": "~14.2.10",
+		"@angular/compiler-cli": "^14.2.0",
+		"@commitlint/cli": "^17.4.3",
+		"@commitlint/config-conventional": "^17.4.3",
+		"@types/chroma-js": "^2.1.5",
+		"@types/jasmine": "~4.0.0",
+		"@typescript-eslint/eslint-plugin": "5.43.0",
+		"@typescript-eslint/parser": "5.43.0",
+		"deepmerge-ts": "^4.3.0",
+		"eslint": "^8.28.0",
+		"eslint-plugin-deprecation": "^1.3.3",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-unused-imports": "^2.0.0",
+		"husky": "^8.0.3",
+		"jasmine-core": "~4.3.0",
+		"karma": "~6.4.0",
+		"karma-chrome-launcher": "~3.1.0",
+		"karma-coverage": "~2.2.0",
+		"karma-jasmine": "~5.1.0",
+		"karma-jasmine-html-reporter": "~2.0.0",
+		"lint-staged": "^13.1.2",
+		"prettier": "^2.8.4",
+		"typescript": "~4.7.2"
+	},
+	"lint-staged": {
+		"*.ts": [
+			"eslint"
+		]
+	}
 }
