--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
 		"@angular/platform-browser": "^14.2.0",
 		"@angular/platform-browser-dynamic": "^14.2.0",
 		"@angular/router": "^14.2.0",
+		"@ng-select/ng-select": "^9.1.0",
 		"@ngx-translate/core": "^14.0.0",
 		"@ngx-translate/http-loader": "^7.0.0",
 		"bootstrap": "^5.2.3",
 		"chroma-js": "^2.4.2",
 		"jwt-decode": "^3.1.2",
 		"ngx-avatar": "^4.1.0",
+		"ngx-mat-select-search": "^5.0.0",
 		"ngx-translate-multi-http-loader": "^9.3.1",
 		"rxjs": "~7.5.0",
 		"tslib": "^2.3.0",
