--- a/angular.json
+++ b/angular.json
@@ -1,124 +1,109 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1,
-  "newProjectRoot": "projects",
-  "projects": {
-    "app-ui": {
-      "projectType": "application",
-      "schematics": {
-        "@schematics/angular:component": {
-          "style": "scss"
-        }
-      },
-      "root": "projects/app-ui",
-      "sourceRoot": "projects/app-ui/src",
-      "prefix": "app",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:browser",
-          "options": {
-            "outputPath": "dist/app-ui",
-            "index": "projects/app-ui/src/index.html",
-            "main": "projects/app-ui/src/main.ts",
-            "polyfills": "projects/app-ui/src/polyfills.ts",
-            "tsConfig": "projects/app-ui/tsconfig.app.json",
-            "inlineStyleLanguage": "scss",
-            "allowedCommonJsDependencies": [
-              "chroma-js"
-            ],
-            "assets": [
-              "projects/app-ui/src/favicon.ico",
-              "projects/app-ui/src/assets"
-            ],
-            "styles": [
-              "projects/app-ui/src/styles.scss"
-            ],
-            "scripts": []
-          },
-          "configurations": {
-            "production": {
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
-                }
-              ],
-              "fileReplacements": [
-                {
-                  "replace": "projects/app-ui/src/environments/environment.ts",
-                  "with": "projects/app-ui/src/environments/environment.prod.ts"
-                }
-              ],
-              "outputHashing": "all"
-            },
-            "development": {
-              "buildOptimizer": false,
-              "optimization": false,
-              "vendorChunk": true,
-              "extractLicenses": false,
-              "sourceMap": true,
-              "namedChunks": true
-            }
-          },
-          "defaultConfiguration": "production"
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "configurations": {
-            "production": {
-              "browserTarget": "app-ui:build:production"
-            },
-            "development": {
-              "browserTarget": "app-ui:build:development"
-            }
-          },
-          "defaultConfiguration": "development"
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "app-ui:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "projects/app-ui/src/test.ts",
-            "polyfills": "projects/app-ui/src/polyfills.ts",
-            "tsConfig": "projects/app-ui/tsconfig.spec.json",
-            "karmaConfig": "projects/app-ui/karma.conf.js",
-            "inlineStyleLanguage": "scss",
-            "assets": [
-              "projects/app-ui/src/favicon.ico",
-              "projects/app-ui/src/assets"
-            ],
-            "styles": [
-              "projects/app-ui/src/styles.scss"
-            ],
-            "scripts": []
-          }
-        },
-        "lint": {
-          "builder": "@angular-eslint/builder:lint",
-          "options": {
-            "lintFilePatterns": [
-              "projects/app-ui/**/*.ts",
-              "projects/app-ui/**/*.html"
-            ]
-          }
-        }
-      }
-    }
-  },
-  "cli": {
-    "schematicCollections": [
-      "@angular-eslint/schematics"
-    ]
-  }
+	"$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+	"version": 1,
+	"newProjectRoot": "projects",
+	"projects": {
+		"app-ui": {
+			"projectType": "application",
+			"schematics": {
+				"@schematics/angular:component": {
+					"style": "scss"
+				}
+			},
+			"root": "projects/app-ui",
+			"sourceRoot": "projects/app-ui/src",
+			"prefix": "app",
+			"architect": {
+				"build": {
+					"builder": "@angular-devkit/build-angular:browser",
+					"options": {
+						"outputPath": "dist/app-ui",
+						"index": "projects/app-ui/src/index.html",
+						"main": "projects/app-ui/src/main.ts",
+						"polyfills": "projects/app-ui/src/polyfills.ts",
+						"tsConfig": "projects/app-ui/tsconfig.app.json",
+						"inlineStyleLanguage": "scss",
+						"allowedCommonJsDependencies": ["chroma-js"],
+						"assets": ["projects/app-ui/src/favicon.ico", "projects/app-ui/src/assets", "projects/app-ui/src/manifest.webmanifest"],
+						"styles": ["projects/app-ui/src/styles.scss"],
+						"scripts": [],
+						"serviceWorker": true,
+						"ngswConfigPath": "projects/app-ui/ngsw-config.json"
+					},
+					"configurations": {
+						"production": {
+							"budgets": [
+								{
+									"type": "initial",
+									"maximumWarning": "4mb",
+									"maximumError": "4mb"
+								},
+								{
+									"type": "anyComponentStyle",
+									"maximumWarning": "2kb",
+									"maximumError": "4kb"
+								}
+							],
+							"fileReplacements": [
+								{
+									"replace": "projects/app-ui/src/environments/environment.ts",
+									"with": "projects/app-ui/src/environments/environment.prod.ts"
+								}
+							],
+							"outputHashing": "all"
+						},
+						"development": {
+							"buildOptimizer": false,
+							"optimization": false,
+							"vendorChunk": true,
+							"extractLicenses": false,
+							"sourceMap": true,
+							"namedChunks": true
+						}
+					},
+					"defaultConfiguration": "production"
+				},
+				"serve": {
+					"builder": "@angular-devkit/build-angular:dev-server",
+					"configurations": {
+						"production": {
+							"browserTarget": "app-ui:build:production"
+						},
+						"development": {
+							"browserTarget": "app-ui:build:development"
+						}
+					},
+					"defaultConfiguration": "development"
+				},
+				"extract-i18n": {
+					"builder": "@angular-devkit/build-angular:extract-i18n",
+					"options": {
+						"browserTarget": "app-ui:build"
+					}
+				},
+				"test": {
+					"builder": "@angular-devkit/build-angular:karma",
+					"options": {
+						"main": "projects/app-ui/src/test.ts",
+						"polyfills": "projects/app-ui/src/polyfills.ts",
+						"tsConfig": "projects/app-ui/tsconfig.spec.json",
+						"karmaConfig": "projects/app-ui/karma.conf.js",
+						"inlineStyleLanguage": "scss",
+						"assets": ["projects/app-ui/src/favicon.ico", "projects/app-ui/src/assets", "projects/app-ui/src/manifest.webmanifest"],
+						"styles": ["projects/app-ui/src/styles.scss"],
+						"scripts": []
+					}
+				},
+				"lint": {
+					"builder": "@angular-eslint/builder:lint",
+					"options": {
+						"lintFilePatterns": ["projects/app-ui/**/*.ts", "projects/app-ui/**/*.html"]
+					}
+				}
+			}
+		}
+	},
+	"cli": {
+		"schematicCollections": ["@angular-eslint/schematics"]
+	}
 }
