--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@angular/platform-browser": "^14.2.0",
 		"@angular/platform-browser-dynamic": "^14.2.0",
 		"@angular/router": "^14.2.0",
+		"@angular/service-worker": "^14.2.0",
 		"@ng-select/ng-select": "^9.1.0",
 		"@ngx-translate/core": "^14.0.0",
 		"@ngx-translate/http-loader": "^7.0.0",
@@ -58,6 +59,7 @@
 		"eslint-plugin-deprecation": "^1.3.3",
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-unused-imports": "^2.0.0",
+		"http-server": "^14.1.1",
 		"husky": "^8.0.3",
 		"jasmine-core": "~4.3.0",
 		"karma": "~6.4.0",
