feat: add service worker update check
- add service worker update check
- add browser status check app-worker

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
 	"root": true,
 	"plugins": ["import", "unused-imports", "deprecation"],
-	"ignorePatterns": ["projects/**/*"],
+	"ignorePatterns": ["projects/**/*", "*.worker.ts"],
 	"overrides": [
 		{
 			"files": ["*.ts"],
