--- a/projects/app-ui/ngsw-config.json
+++ b/projects/app-ui/ngsw-config.json
@@ -17,5 +17,6 @@
 				"files": ["/assets/**", "/*.(svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)"]
 			}
 		}
-	]
+	],
+	"navigationRequestStrategy": "freshness"
 }
