--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@angular/router": "^14.2.0",
 		"@angular/service-worker": "^14.2.0",
 		"@ng-select/ng-select": "^9.1.0",
+		"@ngrx/component-store": "^14.3.3",
 		"@ngx-translate/core": "^14.0.0",
 		"@ngx-translate/http-loader": "^7.0.0",
 		"bootstrap": "^5.2.3",
