--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"@types/jasmine": "~4.0.0",
 		"@typescript-eslint/eslint-plugin": "5.43.0",
 		"@typescript-eslint/parser": "5.43.0",
+		"branch-name-lint": "^2.1.1",
 		"deepmerge-ts": "^4.3.0",
 		"eslint": "^8.28.0",
 		"eslint-plugin-deprecation": "^1.3.3",
